tweak size of bullet to avoid anti-aliasing distortion that made circle sides look flattened

--- a/eucaconsole/static/sass/eucaconsole.scss
+++ b/eucaconsole/static/sass/eucaconsole.scss
@@ -1140,6 +1140,7 @@ ul.bullet-list {
     list-style-type: none;
     li:before {
         font-family: 'FontAwesome';
+        font-size: 15px;
         content: '\f138';
         margin: 0 5px 0 -15px;
         color: $hp-accessible-blue;
